fixed project spacing to account for navbar

--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -5,7 +5,10 @@ $dark-bg: #222;
 $sub-color: #58514D;
 $sub-color-2: #B3B3B3;
 $strong-color: #EEF268;
+
 $main-font: "Lato", Geneva, Tahoma, sans-serif;
 $link-font: "Lato", Geneva, Tahoma, sans-serif;
 $strong-font: "Lato", Arial, Helvetica, sans-serif;
 $header-font: "Oswald", Verdana, Geneva, sans-serif;
+
+$project-nav-width: 209px;
